--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=citasmedicas
+# Configuración de H2 en memoria
+spring.datasource.url=jdbc:h2:mem:dbpruebatecnica
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Configuración de JPA y H2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Habilitar consola H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
