--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.show-sql=true
 # Habilitar consola H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# Configuración de Swagger
+springdoc.swagger-ui.path=/documentacion
