--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=citasmedicas
 # Configuración de H2 en memoria
-spring.datasource.url=jdbc:h2:mem:dbpruebatecnica
+spring.datasource.url=jdbc:h2:mem:dbcitasmedicas
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
